# GRPO_finetuning

./: .gitignore  README.md  chat.py  chat_unsloth.py  chat_vllm.py  merge_models.py  pyproject.toml  readme.txt  setup.sh  train.py  utils.py  vlm_chat_template.jinja
chat_ui/: run.py  run_vlm.py
train/: qwen3_4B_VL_thinking_sft.py  qwen3_4B_grpo_qat.py  qwen3_8B_grpo.py
