[project]
name = "grpo-finetuning"
version = "0.1.0"
description = "Setup for GRPO Finetuning using uv"
dependencies = [
    "unsloth",
    "torchvision",
    "bitsandbytes",
    "xformers",
    "numpy",
    "pillow",
    "transformers==4.56.2",
    "trl==0.22.2",
    "dotenv",
]

[tool.uv]
managed = true
# Chúng ta không cài deps của trl theo yêu cầu --no-deps của bạn
# Tuy nhiên uv sẽ tự giải quyết xung đột tốt hơn pip